text align form

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <blockquote> “Life is uncertain. Eat dessert first.”</blockquote>
                     <div class="meal-search-box">
 
-                        <div class="input-group">
-                            <input type="text" class="form-control" id="search-input">
+                        <div class="input-group col-xs-2 justify-content-center ">
+                            <input type="text" class="form-control-sm " value="#563d7c" id="search-input">
                             <button class="btn btn-outline-secondary" type="submit" id="search-btn">Go</button>
                         </div>
 
@@ -71,7 +71,7 @@
 
 
                     </div>
-                    
+
                 </div>
             </div>
 
